--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                 <p>Une application web qui permet de compresser un fichier puis de le télécharger au format .zip</p>
                 <a href="http://compressitn.infinityfreeapp.com/">Découvrir</a>
             </div>
+            <div class="app">
+                <h3>Memory Cards Challenge</h3>
+                <p>un jeu Web captivant conçu pour tester et améliorer vos capacités de mémoire ! Dans ce jeu, les joueurs se voient présenter une grille de cartes face cachée, chacune contenant une image ou un symbole. L'objectif est simple mais stimulant : découvrez des paires de cartes correspondantes en les retournant deux à la fois.</p>
+                <a href="https://memory-cards-challenge.netlify.app/">Découvrir</a>
+            </div>
         </div>
     </section>
 
