--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 <p>un jeu Web captivant conçu pour tester et améliorer vos capacités de mémoire ! Dans ce jeu, les joueurs se voient présenter une grille de cartes face cachée, chacune contenant une image ou un symbole. L'objectif est simple mais stimulant : découvrez des paires de cartes correspondantes en les retournant deux à la fois.</p>
                 <a href="https://memory-cards-challenge.netlify.app/">Découvrir</a>
             </div>
+            <div class="app">
+                <h3>Enigma</h3>
+                <p>Une application Web capable de crypter et déchiffrer les messages avec une seule clé.</p>
+                <a href="https://eniigma.netlify.app/">Découvrir</a>
+            </div>
         </div>
     </section>
 
