--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="accueil" >
         <div class="container x">
             <h2>Bienvenue sur notre repertoire web <br> Mohamed Ghoul Productions</h2>
-            <p class="acc">Embarquez pour un voyage d'exploration à travers notre dernière gamme d'applications méticuleusement conçues, méticuleusement conçues pour élever et enrichir votre style de vie numérique. Plongez dans un monde d'innovation et d'efficacité en découvrant des solutions intuitives conçues pour simplifier et améliorer vos efforts quotidiens.</p>
+            <p class="acc">Embarquez pour un voyage d'exploration à travers notre dernière gamme d'applications méticuleusement conçues pour élever et enrichir votre style de vie numérique. Plongez dans un monde d'innovation et d'efficacité en découvrant des solutions intuitives conçues pour simplifier et améliorer vos efforts quotidiens.</p>
             <a href="#applications" class="btn">Découvrir nos applications</a>
         </div>
     </section>
@@ -43,7 +43,7 @@
             <div class="app">
                 <h3>Compressi.tn</h3>
                 <p>Une application web qui permet de compresser un fichier puis de le télécharger au format .zip</p>
-                <a href="http://compressitn.infinityfreeapp.com/">Découvrir</a>
+                <a href="https://compressitn.netlify.app/">Découvrir</a>
             </div>
             <div class="app">
                 <h3>Memory Cards Challenge</h3>
@@ -54,6 +54,11 @@
                 <h3>Enigma</h3>
                 <p>Une application Web capable de crypter et déchiffrer les messages avec une seule clé.</p>
                 <a href="https://eniigma.netlify.app/">Découvrir</a>
+            </div>
+            <div class="app">
+                <h3>2048</h3>
+                <p>Découvrez le plaisir addictif du puzzle classique 2048 directement dans votre navigateur. Que vous soyez un passionné de puzzles ou que vous recherchiez simplement un défi mental rapide, ce jeu vous divertira à coup sûr pendant des heures.</p>
+                <a href="https://mg2048.netlify.app/">Découvrir</a>
             </div>
         </div>
     </section>
