--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                 <p>Découvrez le plaisir addictif du puzzle classique 2048 directement dans votre navigateur. Que vous soyez un passionné de puzzles ou que vous recherchiez simplement un défi mental rapide, ce jeu vous divertira à coup sûr pendant des heures.</p>
                 <a href="https://mg2048.netlify.app/">Découvrir</a>
             </div>
+            <div class="app">
+                <h3>Runnit.JS</h3>
+                <p>une application Web qui compile n'importe quel code JavaScript offre aux développeurs un outil polyvalent pour tester, déboguer et expérimenter des extraits de code JavaScript.</p>
+                <a href="https://runnit-js.netlify.app/">Découvrir</a>
+            </div>
         </div>
     </section>
 
