--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                 <p>une application Web qui compile n'importe quel code JavaScript offre aux développeurs un outil polyvalent pour tester, déboguer et expérimenter des extraits de code JavaScript.</p>
                 <a href="https://runnit-js.netlify.app/">Découvrir</a>
             </div>
+            <div class="app">
+                <h3>Mole Slam</h3>
+                <p>Mole-slam est un jeu d'arcade classique apprécié par les joueurs de tous âges depuis des décennies. Dans ce jeu addictif, les joueurs doivent être sur leurs gardes pour tenter d'éliminer les taupes embêtantes qui surgissent au hasard de leurs trous. À chaque coup réussi, les joueurs gagnent des points et avancent leur score. Mais attention : ces taupes sont sournoises et rapides, alors restez vigilant !</p>
+                <a href="https://mole-slam-mg.netlify.app/">Découvrir</a>
+            </div>
         </div>
     </section>
 
